--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "console-log-colors": "^0.2.3",
     "express": "^4.18.1",
     "socket.io": "^4.5.0",
     "socket.io-client": "^4.5.0"
