--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "console-log-colors": "^0.2.3",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "socket.io": "^4.5.0",
     "socket.io-client": "^4.5.0"
