--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "console-log-colors": "^0.2.3",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "jose": "^4.8.1",
     "socket.io": "^4.5.0",
     "socket.io-client": "^4.5.0"
   },
