--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "console-log-colors": "^0.2.3",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "global": "^4.4.0",
     "jose": "^4.8.1",
+    "nodemon": "^2.0.16",
     "socket.io": "^4.5.0",
-    "socket.io-client": "^4.5.0"
+    "socket.io-client": "^4.5.0",
+    "uid": "^2.0.0",
+    "uid2": "^1.0.0"
   },
   "devDependencies": {
     "better-docs": "^2.7.2",
